# boltffi

./: .gitignore  BOLTFFI_TOML_SPEC.md  Cargo.toml  KMP_SUPPORT_ROADMAP.md  README.md  justfile
.github/workflows/: benchmark-release.yml  ci.yml  publish-crates.yml  release.yml
benchmarks/: README.md
benchmarks/scripts/: benchmarkdotnet_to_run.py  jmh_to_benchmark_run.py  test_benchmarkdotnet_to_run.py
boltffi/src/: lib.rs
boltffi_ast/src/: callable.rs  custom.rs  ids.rs  lib.rs  name.rs  type_expr.rs
boltffi_backend/tests/: dart_web.rs  java.rs  java_runtime.rs  jni.rs  kotlin.rs  swift.rs
boltffi_bindgen/: Cargo.toml  askama.toml
boltffi_bindgen/src/: generate.rs  lib.rs  metadata.rs  target.rs
boltffi_binding/: Cargo.toml
boltffi_binding/src/: lib.rs
boltffi_cli/src/: build.rs  cli.rs  target.rs
boltffi_cli/templates/: AppleFramework.modulemap  AppleFrameworkInfo.plist.xml  ApplePackageLocal.swift  ApplePackageRemote.swift
boltffi_core/src/: interned_string.rs  lib.rs  wasm.rs
boltffi_ffi_rules/src/: cargo_graph.rs  lib.rs
boltffi_macros/: Cargo.toml
boltffi_macros/src/: lib.rs
boltffi_scan/: Cargo.toml
boltffi_scan/src/: cfg.rs  const_expr.rs  declared_types.rs  error.rs  impl_target.rs  input.rs  lib.rs  marked.rs  marker.rs  name.rs  path.rs  repr.rs  scan.rs  source_tree.rs  spelling.rs  type_expr.rs  unsupported.rs  visibility.rs
boltffi_tests/: Cargo.toml  build.rs
boltffi_tests/src/: lib.rs
boltffi_tests/tests/: crossing_behavior.rs  interned_string.rs  record_methods.rs  scan_to_bindings.rs
docs/: package-lock.json
(+732 files in other folders)
